<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eat_grass"
            android:id="@+id/button_eat_grass"/>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stealing_food"
            android:id="@+id/button_stealing_food"/>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/begging_sugar"
            android:id="@+id/button_begging_sugar"/>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_for_food"
            android:id="@+id/button_ask_for_food"/>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eat_apple"
            android:id="@+id/button_eat_apple"/>
    </TableLayout>
</LinearLayout>