<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_apple"
                android:id="@+id/button_find_apple"/>
        </TableLayout>
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_find_apple"/>
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_people"
                android:id="@+id/button_help_people"/>
        </TableLayout>
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_help_people"/>
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_horses"
                android:id="@+id/button_help_horses"/>
        </TableLayout>
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_help_horses"/>
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plowed_field"
                android:id="@+id/button_plowed_field"/>
        </TableLayout>
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_plowed_field"/>
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/knock_corral_gate"
                android:id="@+id/button_knock_corral_gate"/>
        </TableLayout>
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_knock_corral_gate"/>
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bob_muscles"
                android:id="@+id/button_bob_muscles"/>
        </TableLayout>
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_bob_muscles"/>
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participate_horse_race"
                android:id="@+id/button_participate_horse_race"/>
        </TableLayout>
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_participate_horse_race"/>
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participate_championship"
                android:id="@+id/button_participate_championship"/>
        </TableLayout>
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_participate_championship"/>
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>
</ScrollView>