<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_gravity="left"
            android:id="@+id/total_score"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_score"
            android:textSize="20sp" />
        <TextView
            android:layout_gravity="right"
            android:id="@+id/value_total_score"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/black"/>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:id="@+id/respect_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respect_peoples"
            />
        <TextView
            android:textSize="18sp"
            android:layout_gravity="right"
            android:id="@+id/value_respect_people"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:id="@+id/respect_horses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respect_horses"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="right"
            android:id="@+id/value_respect_horses"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:id="@+id/max_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_speed"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="right"
            android:id="@+id/value_max_speed"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="right"
            android:id="@+id/value_level"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:id="@+id/habitat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="right"
            android:id="@+id/value_habitat"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:id="@+id/roma_atack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roma_attack"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="right"
            android:id="@+id/value_roma_attack"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:id="@+id/time_to_attack"
        android:textColor="@android:color/holo_orange_dark"
        android:text="@string/time_to_attack"/>
    <TextView
        android:layout_gravity="center"
        android:id="@+id/value_time_to_attack"
        android:layout_width="wrap_content"
        android:textSize="30dp"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_table_level"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/button_how_to_play"/>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>
</ScrollView>